--- a/package.json
+++ b/package.json
@@ -22,12 +22,19 @@
   "homepage": "https://github.com/vzx7/wcnft#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.7",
+    "@nomiclabs/hardhat-truffle5": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.3.2",
     "ethers": "^5.5.1",
-    "hardhat": "^2.6.7"
+    "hardhat": "^2.6.7",
+    "hardhat-deploy": "^0.9.4"
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.7",
+    "@types/bignumber.js": "^5.0.0",
+    "base64-sol": "^1.1.0",
     "dotenv": "^10.0.0"
   }
 }
