--- a/package.json
+++ b/package.json
@@ -21,20 +21,30 @@
   },
   "homepage": "https://github.com/vzx7/wcnft#readme",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.7",
-    "@nomiclabs/hardhat-truffle5": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/contracts": "^4.3.2",
-    "ethers": "^5.5.1",
-    "hardhat": "^2.6.7",
-    "hardhat-deploy": "^0.9.4"
+    "chai": "^4.2.0",
+    "chai-bignumber": "^3.0.0",
+    "chai-bn": "^0.2.1",
+    "ethereum-waffle": "^3.2.1",
+    "ethers": "^5.0.24",
+    "hardhat": "^2.6.1",
+    "hardhat-deploy": "^0.7.0-beta.39",
+    "web3": "^1.2.9"
   },
   "dependencies": {
-    "@alch/alchemy-web3": "^1.1.7",
-    "@types/bignumber.js": "^5.0.0",
-    "base64-sol": "^1.1.0",
-    "dotenv": "^10.0.0"
+    "@chainlink/contracts": "^0.2.1",
+    "@chainlink/test-helpers": "0.0.5",
+    "@chainlink/token": "^1.1.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.3.1",
+    "babel-eslint": "^10.1.0",
+    "base64-sol": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.22.0",
+    "mocha-skip-if": "^0.0.3",
+    "transform": "^1.1.2"
   }
 }
