--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "do_nft": "node scripts/mint-nft.js"
+    "send_nft": "node scripts/mint-nft.js"
   },
   "repository": {
     "type": "git",
